\name{TileDBArrayNews}
\title{TileDBArray News}
\encoding{UTF-8}

\section{Version 1.16.0}{\itemize{
\item Minor fix for \code{as.data.frame=} deprecation in \code{tiledb_array()}.
}}

\section{Version 1.2.0}{\itemize{
\item
Add more schema options during TileDBArray construction.

\item 
Use \code{tiledb_array()} for both sparse and dense arrays.
}}

\section{Version 1.0.0}{\itemize{
\item
New package \pkg{TileDBArray} implementing a DelayedArray backend for TileDB.
}}
