@@ -7,6 +7,7 @@ export(getTileDBAttr)
 export(getTileDBCapacity)
 export(getTileDBCellOrder)
 export(getTileDBContext)
+export(getTileDBDimType)
 export(getTileDBExtent)
 export(getTileDBPath)
 export(getTileDBTileOrder)
@@ -14,6 +15,7 @@ export(setTileDBAttr)
 export(setTileDBCapacity)
 export(setTileDBCellOrder)
 export(setTileDBContext)
+export(setTileDBDimType)
 export(setTileDBExtent)
 export(setTileDBPath)
 export(setTileDBTileOrder)
